--- a/css/common.css
+++ b/css/common.css
@@ -17,7 +17,7 @@ p:active {
 }
 
 #header {
-  font-family: "Niccolo-Test_normalized";
+  font-family: "pixels-smal";
   width: 200px;
   float: left;
   /* margin-right: 36px; */
