--- a/css/common.css
+++ b/css/common.css
@@ -43,6 +43,14 @@ p:active {
   position: relative;
   margin-left: 30px;
 }
+.ax {
+  /* float: left; */
+  /* min-width: 300px; */
+  background-color: deeppink;
+}
+.clear {
+  clear: both;
+}
 
 @media only screen and (max-width: 600px) {
   #header {
