--- a/css/common.css
+++ b/css/common.css
@@ -52,6 +52,10 @@ p:active {
   clear: both;
 }
 
+.capsonly {
+  text-transform: uppercase;
+}
+
 @media only screen and (max-width: 600px) {
   #header {
     position: relative;
