--- a/css/common.css
+++ b/css/common.css
@@ -1,13 +1,16 @@
-p {
-  font-size: 72px;
-  line-height: 72px;
-
-  display: block;
-  margin-block-start: 0.3em;
-  margin-block-end: 0.6em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+body {
+  margin-top: 0;
 }
+
+.invisible {
+  display: none;
+}
+.visible_line {
+  display: block;
+}
+.visible_grid {
+}
+
 p:focus {
   outline: 0px solid gainsboro;
 }
@@ -19,30 +22,86 @@ p:active {
 .varTest {
   font-variation-settings: "wght" 400;
 }
-
+#left {
+  float: left;
+  /* background-color: lawngreen; */
+  max-width: 200px;
+  /* min-height: 100vh; */
+  margin-right: 48px;
+}
 #header {
   font-family: "pixels-smal";
+  /* float: left; */
   width: 200px;
-  float: left;
   /* margin-right: 36px; */
-  background-color: crimson;
+  background: rgb(209, 0, 94);
+  background: linear-gradient(
+    66deg,
+    rgba(209, 0, 94, 1) 0%,
+    rgba(255, 0, 0, 1) 100%
+  );
   color: whitesmoke;
   padding-left: 16px;
-  padding-top: 30px;
-  top: -20px;
-  position: fixed;
+  padding-top: 16px;
+  padding-bottom: 12px;
+  /* top: -20px; */
+  /* position: fixed; */
 }
 
 #header p {
   font-size: 36px;
   line-height: 36px;
 }
-#lineup {
-  left: 250px;
+
+#views {
   /* float: left; */
-  position: relative;
+}
+
+#thefonts {
+  float: left;
+  width: calc(100vw - 300px);
+}
+
+div.lineView {
+  /* left: 250px; */
+  /* float: left; */
   margin-left: 30px;
 }
+.lineView p {
+  font-size: 84px;
+  line-height: 144px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+div.gridView {
+  background-color: #f2f2f2;
+  max-width: 300px;
+  min-width: 300px;
+  min-height: 300px;
+  max-height: 300px;
+  margin: 24px;
+  float: left;
+}
+.gridView p {
+  text-align: center;
+  font-size: 200px;
+  line-height: 300px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+.gridView input {
+  margin-bottom: 0;
+  
+}
+/* #gridview .gridviewItem p {
+  float: left;
+  padding-top: 30px;
+  display: inline;
+  font-size: 144px;
+  margin: 36px;
+} */
+
 .ax {
   /* float: left; */
   /* min-width: 300px; */
@@ -59,7 +118,11 @@ p:active {
   text-transform: lowercase;
 }
 
-@media only screen and (max-width: 600px) {
+.varSup {
+  font-family: monospace;
+}
+
+/* @media only screen and (max-width: 600px) {
   #header {
     position: relative;
     float: none;
@@ -90,4 +153,4 @@ p:active {
     margin-inline-end: 0px;
     min-width: 800px;
   }
-}
+} */
