--- a/css/main.css
+++ b/css/main.css
@@ -3,82 +3,93 @@
 	src: url();
 }*/
 .clear {
-	clear: both;
+  clear: both;
 }
 
 #bottomline {
-	position: fixed;
-	bottom: 0px;
-	background-color: #FF0020;
-	width:100vw;
-	font-size: 6px;
+  position: fixed;
+  bottom: 0px;
+  background-color: #ff0020;
+  width: 100vw;
+  font-size: 6px;
 }
-
 
 html {
-	font-family: 'Source Code Pro', monospace;
-	line-height: 2em;
+  font-family: "Source Code Pro", monospace;
+  line-height: 2em;
 }
 #main {
-	margin-left: 72px;
+  margin-left: 72px;
 }
 
 b {
-	font-weight: 600;
+  font-weight: 600;
 }
 
-#tagline  {
-	background-color: #FF0020; 
-	padding-bottom: 18px;
-	margin-bottom: 48px;
-	padding-left: 54px;
+#tagline {
+  background-color: #ff0020;
+  padding-bottom: 18px;
+  margin-bottom: 48px;
+  padding-left: 54px;
 }
-
-
 
 .typelink {
-	float: right;
-	font-weight: bold;
-
-
+  float: right;
+  font-weight: bold;
 }
 a:hover {
-	color: inherit;
-	text-decoration:none;
-	background-color: #ff0033;
-	color: #ffffff;
+  color: inherit;
+  text-decoration: none;
+  background-color: #ff0033;
+  color: #ffffff;
 }
 
-
-
-
 #construction {
-	min-width: 300px;
-	min-height: 172px;
-	background-color: #ff0033;
-	font-weight: bold;
-	font-size: 30px;
-	text-align: left;
-	/*padding-top: 30px;*/
-	color: #fff;
-	float: right;
-	border-radius: 6px;
-	margin-top: -30px;
-	margin-right: 24px;
-
+  min-width: 300px;
+  min-height: 172px;
+  background-color: #ff0033;
+  font-weight: bold;
+  font-size: 30px;
+  text-align: left;
+  /*padding-top: 30px;*/
+  color: #fff;
+  float: right;
+  border-radius: 6px;
+  margin-top: -30px;
+  margin-right: 24px;
 }
 
 #gohere {
-	min-width: 200px;
-	min-height: 72px;
-	background-color: #ff0033;
-	font-weight: bold;
-	font-size: 30px;
-	text-align: center;
-	/*padding-top: 30px;*/
-	color: #fff;
-	float: right;
-	border-radius: 6px;
-	margin-top: -30px;
+  min-width: 200px;
+  min-height: 72px;
+  background-color: #ff0033;
+  font-weight: bold;
+  font-size: 30px;
+  text-align: center;
+  /*padding-top: 30px;*/
+  color: #fff;
+  float: right;
+  border-radius: 6px;
+  margin-top: -30px;
+}
 
+.pt72 {
+  font-size: 72px;
+}
+
+#varUnit {
+  font-size: 72px;
+  background-color: #66E5CC;
+  max-width: 900px;
+  text-align: center;
+  padding-top: 36px;
+}
+
+.varSup {
+  margin-top: 24px;
+  font-family: "Source Code Pro", monospace;
+  font-size: 16px;
+  background-color: #ffffff;
+  border: 4mm solid #66E5CC;
+  text-align: left;
 }
