--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,8 @@ b {
 a:hover {
   color: inherit;
   text-decoration: none;
-  background-color: #ff0033;
   color: #ffffff;
+  background-color: #ff0033;
 }
 
 #construction {
@@ -89,7 +89,14 @@ a:hover {
   margin-top: 24px;
   font-family: "Source Code Pro", monospace;
   font-size: 16px;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
+
   border: 4mm solid #66E5CC;
   text-align: left;
 }
+input {
+  min-width: 200px;
+}
+
+
+
