--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,8 @@ a:hover {
   border-radius: 6px;
   margin-top: -30px;
   margin-right: 24px;
+
+  display: none;
 }
 
 #gohere {
@@ -71,6 +73,8 @@ a:hover {
   float: right;
   border-radius: 6px;
   margin-top: -30px;
+
+  display: none;
 }
 
 .pt72 {
