--- a/css/project.css
+++ b/css/project.css
@@ -1,54 +1,49 @@
 .project {
-	
-
 }
 
 .cover {
-	float: left;
-	margin-right: 24px;
-	margin-bottom: 48px;
+  float: left;
+  margin-right: 24px;
+  margin-bottom: 48px;
 }
 
 .cover img {
-	width:600px;
+  width: 600px;
 }
 
 .title {
-	margin-bottom: 12px;
-	font-weight: 600;
+  margin-bottom: 12px;
+  font-weight: 600;
 }
 
 .tags {
-
 }
 
 img {
-	max-width: 900px;
+  max-width: 900px;
+  display: block;
+  margin-bottom: 12px;
 }
 
-
 .description {
-	margin: 24px 0px;
-	line-height: 120%;	
-	width: 800px;
+  margin: 24px 0px;
+  line-height: 120%;
+  width: 800px;
 }
 
 .desctop {
-	width: 900px;
-	max-width: 860px;
-	padding: 16px;
-	border-right: 4px solid #FF1933;
-	border-left: 4px solid #FF1933;
-	border-top: 4px solid #FF1933;
-	margin-bottom: -0px;
-
+  width: 900px;
+  max-width: 860px;
+  padding: 16px;
+  border-right: 4px solid #ff1933;
+  border-left: 4px solid #ff1933;
+  border-top: 4px solid #ff1933;
+  margin-bottom: -0px;
 }
 
 .description a {
-	background-color: #ff003316;
-
+  background-color: #ff003316;
 }
 .description a:hover {
-	/*background-color: #ff0033;*/
-
+  /*background-color: #ff0033;*/
 }
