--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,13 @@ b {
 
 #tagline {
   background-color: #ff0020;
+  background: rgb(67, 218, 216);
+  background: linear-gradient(
+    30deg,
+    rgba(67, 218, 216, 1) 0%,
+    rgba(60, 223, 205, 1) 100%
+  );
+
   padding-bottom: 18px;
   margin-bottom: 48px;
   padding-left: 54px;
@@ -51,7 +58,6 @@ a:hover {
   font-weight: bold;
   font-size: 30px;
   text-align: left;
-  /*padding-top: 30px;*/
   color: #fff;
   float: right;
   border-radius: 6px;
@@ -68,7 +74,6 @@ a:hover {
   font-weight: bold;
   font-size: 30px;
   text-align: center;
-  /*padding-top: 30px;*/
   color: #fff;
   float: right;
   border-radius: 6px;
@@ -83,7 +88,7 @@ a:hover {
 
 #varUnit {
   font-size: 72px;
-  background-color: #66E5CC;
+  background-color: #66e5cc;
   max-width: 900px;
   text-align: center;
   padding-top: 36px;
@@ -93,15 +98,14 @@ a:hover {
   margin-top: 24px;
   font-family: "Source Code Pro", monospace;
   font-size: 16px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 
-  border: 4mm solid #66E5CC;
+  border: 4mm solid #66e5cc;
   text-align: left;
 }
 input {
   min-width: 200px;
 }
-
 
 div.mermaid {
   font-family: "Source Code Pro";
