--- a/css/main.css
+++ b/css/main.css
@@ -40,15 +40,12 @@ b {
   padding-left: 54px;
 }
 
-.typelink {
-  float: right;
-  font-weight: bold;
-}
 a:hover {
   color: inherit;
   text-decoration: none;
   color: #ffffff;
   background-color: #ff0033;
+  font-weight: 600;
 }
 
 #construction {
@@ -109,4 +106,11 @@ input {
 
 div.mermaid {
   font-family: "Source Code Pro";
+}
+
+.typelink {
+  float: right;
+  font-weight: 600;
+  background-color: inherit;
+  margin-right: 36px;
 }
