--- a/css/project700.css
+++ b/css/project700.css
@@ -38,7 +38,7 @@
     background-color: #ff003316;
   }
   .description a:hover {
-    /*background-color: #ff0033;*/
+    background-color: #ff0033;
   }
   #varUnit {
     font-size: 72px;
@@ -72,6 +72,6 @@
     margin-left: 12px;
   }
   .varPlay p {
-  font-size: 100px;
-}
+    font-size: 100px;
+  }
 }
