--- a/css/main.css
+++ b/css/main.css
@@ -114,3 +114,34 @@ div.mermaid {
   background-color: inherit;
   margin-right: 36px;
 }
+
+/* TABLE */
+.table {
+  display: table;
+  width: 100%;
+  position: relative;
+  height: auto;
+}
+
+.thead {
+  display: table-header-group;
+  font-size: 36px;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  background-color: white;
+}
+
+.table-row {
+  display: table-row;
+}
+
+.td,
+.th {
+  display: table-cell;
+  text-align: center;
+}
+
+.tbody {
+  display: table-row-group;
+}
